--- a/style.css
+++ b/style.css
@@ -28,8 +28,9 @@ h1 {
 }
 
 .img_rapport {
-  width: 48%;
+  max-width: 48%;
   margin-top: 4%;
+  max-height: 600px;
 }
 
 .wave {
@@ -42,4 +43,10 @@ div {
   justify-content: space-around;
   flex-wrap: wrap;
   font-size: 25px;
+}
+
+#W3C {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
